# covid-in-russia

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  download.sh  pyproject.toml  run.py  setup.cfg
covid_in_russia/: enhance.py  example.py  jsonld.py  models.py  parse.py  web_archive_index.py
docs/_templates/: badges.html  github.html  moreinfo.html
tests/: test_jsonld.py  test_parse.py
tests/data/: index.html
tests/test_example/: test_some_function.py
