[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "covid-in-russia"
version = "0.1.0"
description = "Open dataset about COVID-19 spread in Russia."
license = "MIT"

authors = []

readme = "README.md"

repository = "https://github.com/iolanta.tech/covid-in-russia"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.6"
archivenow = "^2020.4.1"
pywb = "^2.3.5"
fire = "^0.3.1"
ipwb = "^0.2020.4"
PyLD = "^2.0.2"
SPARQLWrapper = "^1.8.5"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
mypy = "^0.770"

wemake-python-styleguide = "^0.14.0"
flake8-pytest-style = "^1.0"
nitpick = "^0.22"

safety = "^1.8"

pytest = "^5.4"
pytest-cov = "^2.7"
pytest-randomly = "^3.2"

sphinx = "^2.2"
sphinx-autodoc-typehints = "<1.11"
doc8 = "^0.8"
m2r = "^0.2"
tomlkit = "^0.5"
ipython = "^7.13.0"
